--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity
             android:name=".presentation.home.HomeActivity"
             android:exported="false">
+        </activity>
+        <activity
+            android:name=".presentation.register.RegisterActivity"
+            android:exported="false">
 
         </activity>
     </application>
